@@ -36,7 +36,7 @@ x_plus_minus_3dnow:
 	.long	-2147483648
 
 	.text
-	ALIGN32,,31
+	ALIGN32
 .globl ASM_NAME(dct64_3dnowext)
 	/* .type	ASM_NAME(dct64_3dnowext), @function */
 ASM_NAME(dct64_3dnowext):
@@ -711,7 +711,4 @@ ASM_NAME(dct64_3dnowext):
 	ret
 	/* .size	ASM_NAME(dct64_3dnowext), .-ASM_NAME(dct64_3dnowext) */
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
+NONEXEC_STACK
