@@ -122,8 +122,4 @@ ASM_NAME(synth_1to1_MMX):
         popl %ebp
         ret
 
-/* Mark non-executable stack. */
-#if defined(__linux__) && defined(__ELF__)
-.section .note.GNU-stack,"",%progbits
-#endif
-
+NONEXEC_STACK
